2005-11-09  Lars Clausen  <lars@raeder.dk>

	* objects/UML/uml.c: 
	* objects/UML/class.c: Patch from dklotzbach@foxvalley.net (dave
	Klotzbach): Fixes template rendering and converts home-brew inline
	doc format to javadoc.  Doesn't yet fix bug #320934, but turns it
	into a dup.

2005-11-07  Lars Clausen  <lars@raeder.dk>

	* lib/object.[ch]: Add 'enclosing box' as opposed to 'bounding
	box' since several objects have problems of using bounding box in
	different ways (see bug #300055).  For now, enclosing box ==
	bounding box, but over time objects will learn to expand the
	bounding box to include things only rendered interactively.

	* app/modify_tool.c (modify_motion): Make sure highlight is reset
	when moving between overlapping objects.

	* app/interface.c (interface_toggle_mainpoint_magnetism): Redraw
	diagram after toggling to make red X's come and go.

	* lib/font.c: #ifdef'd out layout cache for bug #307320.  Define
	it if you need faster rendering and aren't afraid of crashbugs:)

	* lib/objchange.c: Bugfix from dklotzbach@foxvalley.net
	(dave Klotzbach):  Fixes null pointer problems in free function.

	* objects/UML/class.c
	* objects/UML/class.h
	* objects/UML/class_dialog.c: Patch from dklotzbach@foxvalley.net
	(dave Klotzbach): Make UML comments conform to UML 1.0 standard
	and allow multi-line comments. Ugly as hell, but standard.  Time
	for a 'Strict UML' option?  Fixes bug #303744.
	
	* objects/UML/state.c: Patch from Peter Allin <peter@peca.dk>: Add
	entry, exit and do descriptions to a state object.  Fixes bug #65434.

2005-11-03  Lars Clausen  <lars@raeder.dk>

	* lib/arrows.c:
	* lib/attributes.c:
	* lib/autoroute.c:
	* lib/bezier_conn.c:
	* lib/boundingbox.c:
	* lib/color.c:
	* lib/connection.c:
	* lib/connectionpoint.c:
	* lib/dia_dirs.c:
	* lib/dia_image.c:
	* lib/dia_svg.c:
	* lib/dia_xml.c:
	* lib/diaarrowchooser.c:
	* lib/diaerror.c:
	* lib/diagdkrenderer.c:
	* lib/diagramdata.c:
	* lib/element.c:
	* lib/object.c:
	* lib/object.h: